<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:layout_marginTop="15dp"
        />

    <ImageView
        android:layout_width="215dp"
        android:layout_height="145dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:background="@color/black"/>
    <!-- app:srcCompat="@drawable/imagen1" -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="25sp"
        />


    <Button
        android:id="@+id/btn_iniciarSesion"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:background="@drawable/round_button_amarillo"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:background="@drawable/round_button_amarillo"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

</LinearLayout>